fix a lot of stuff

--- a/templates/registration_user.html
+++ b/templates/registration_user.html
@@ -67,8 +67,9 @@
                         <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Contact</th>
-                            <th scope="col">Balance</th>
-                            <th scope="col" colspan="2"></th>
+                            <th scope="col">Balance (₱)</th>
+                            <th scope="col">Add funds</th>
+                            <th scope="col">Blacklist</th>
                         </tr>
 
                         {% for user in users %}
