--- a/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
@@ -86,31 +86,31 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="120dp"
-        android:layout_height="28dp"
+        android:layout_width="154dp"
+        android:layout_height="29dp"
         android:layout_marginTop="104dp"
         android:layout_marginEnd="8dp"
-        android:text="Amount Earned:"
+        android:text="Total Amount Earned:"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvAmount"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.959"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSendTransaction"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tvAmount"
-        android:layout_width="85dp"
-        android:layout_height="28dp"
+        android:layout_width="116dp"
+        android:layout_height="27dp"
         android:layout_marginTop="100dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="84dp"
         android:fontFamily="monospace"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSendTransaction"
-        app:layout_constraintVertical_bias="0.078" />
+        app:layout_constraintVertical_bias="0.102" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
