--- a/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
+++ b/BuzzBraceletVendor/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:text="0.0"
         android:textAlignment="center"
         android:textSize="120sp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +38,7 @@
         android:textColor="@android:color/white"
 
         android:textSize="30sp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,14 +61,15 @@
 
     <TextView
         android:id="@+id/tvStatus"
-        android:layout_width="183dp"
-        android:layout_height="62dp"
+        android:layout_width="190dp"
+        android:layout_height="35dp"
         android:layout_marginTop="10dp"
-        android:text="Scan Tag"
+        android:text="Scan Tag..."
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivTag"
         app:layout_constraintVertical_bias="0.0" />
@@ -100,8 +102,8 @@
 
     <TextView
         android:id="@+id/tvAmount"
-        android:layout_width="116dp"
-        android:layout_height="27dp"
+        android:layout_width="119dp"
+        android:layout_height="28dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="84dp"
         android:fontFamily="monospace"
